re PR middle-end/45416 (Code size regression from 4.4 for ARM)

2011-12-07  Andrew Pinski  <apinski@cavium.com>

	PR middle-end/45416
	* expr.c (do_store_flag): Rewrite code that looks for BIT_AND_EXPR for
	SSA-expand.

2011-12-07  Andrew Pinski  <apinski@cavium.com>

	PR middle-end/45416
	* gcc.dg/pr45416.c: New testcase.

From-SVN: r182084